apps/web/mfox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mfox
  namespace: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mfox
  template:
    metadata:
      labels:
        app: mfox

    spec:
      containers:
      - name: mfox
        image: replaced-by-kustomize
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        ports:
          - containerPort: 3000
      imagePullSecrets:
      - name: ghcr-login-secret
