apps/web/mfox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfox
spec:
  selector:
    app: mfox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
