apps/web/mfox/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: &appname mfox
spec:
  entryPoints:
    - websecure
  routes:
    - match: ingress-route-match
      kind: Rule
      services:
        - name: *appname
          port: 80
      middlewares:
        - name: https-only
  tls:
    secretName: mfox-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: mfox-http
spec:
  entryPoints:
    - web
  routes:
    - match: ingress-route-match
      kind: Rule
      services:
        - name: mfox
          port: 80
      middlewares:
        - name: https-only
